--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,6 +12,7 @@ general {
     gaps_in=5
     gaps_out=10
     border_size=1.5
+    cursor_inactive_timeout=30
 }
 
 decoration {
@@ -19,7 +20,6 @@ decoration {
     blur=1
     blur_size=2
     blur_passes=2
-
     drop_shadow=1
     shadow_range=20
     shadow_render_power=2
@@ -46,6 +46,7 @@ gestures {
 
 
 windowrule=float,Rofi
+windowrule=float,PulseAudio Volume Control
 
 # example binds
 bind=SUPERSHIFT,O,exec,/usr/bin/octopi
@@ -58,13 +59,15 @@ bind=SUPERALT,space,togglefloating,
 bind=SUPER,R,exec,rofi -show drun
 bind=SUPERSHIFT,D,exec,Discord
 bind=SUPER,P,pseudo,
-bind=SUPER,F,fullscreen
+bind=SUPER,f,fullscreen,1
+bind=SUPERALT,F,fullscreen,0
 
-bind=SUPERSHIFT,E,exec,setxkbmap latam
-bind=SUPERSHIFT,U,exec,setxkbmap us 
+#bind=SUPER,E,exec,hyprctl keyword input:kb_layout ru
+
+bind=SUPERSHIFT,E,exec,hyprctl keyword input:kb_layout latam
+bind=SUPERSHIFT,U,exec,hyprctl keyword input:kb_layout us
 
 bind=SUPERSHIFT,X,exec,ly
-
 bind=SUPER,h,movefocus,l
 bind=SUPER,l,movefocus,r
 bind=SUPER,j,movefocus,u
@@ -104,5 +107,5 @@ bind=SUPER,mouse_up,workspace,e-1
 
 exec-once=waybar
 exec-once=swaync
-exec-once=swaybg -i /home/core/.wallpapers/simple-night-1920×1080.jpg
+exec-once=swaybg -i /home/core/.wallpapers/wallhaven-j3zqqp.png
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
