--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,7 +1,7 @@
 monitor=,preferred,auto,1
 
 input {
-    follow_mouse=0
+    # follow_mouse=0
     touchpad {
         natural_scroll=no
     }
@@ -66,6 +66,7 @@ bind=SUPERALT,F,fullscreen,0
 
 bind=SUPERSHIFT,E,exec,hyprctl keyword input:kb_layout latam
 bind=SUPERSHIFT,U,exec,hyprctl keyword input:kb_layout us
+bind=SUPER,escape,exec,wtype "~"
 
 bind=SUPERSHIFT,X,exec,ly
 bind=SUPER,h,movefocus,l
