--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -17,10 +17,10 @@ general {
 
 decoration {
     rounding=10
-    blur=1
+    blur=0
     blur_size=2
     blur_passes=2
-    drop_shadow=1
+    drop_shadow=0
     shadow_range=20
     shadow_render_power=2
     shadow_ignore_window=1
@@ -50,8 +50,8 @@ windowrule=float,PulseAudio Volume Control
 
 # example binds
 bind=SUPERSHIFT,O,exec,/usr/bin/octopi
-bind=SUPER,return,exec,wezterm
-bind=SUPERSHIFT,F,exec,firefox
+bind=SUPER,return,exec,kitty
+bind=SUPERSHIFT,F,exec,qutebrowser
 bind=SUPERSHIFT,W,killactive,
 bind=SUPERALT,M,exec,pkill Hyprland
 bind=SUPERSHIFT,G,exec,grim -g "$(slurp)" - | wl-copy
