Update after reinstall

--- a/cfg/kitty/kitty.conf
+++ b/cfg/kitty/kitty.conf
@@ -1,19 +1,20 @@
 # Options:
 window_padding_width 1 2
-background_opacity 0.5
+# background_opacity 0.3
 allow_remote_control
 
 # Fonts:
 # font_family      Hurmit Nerd Font Mono
 font_family      JetBrains Mono
-font_size 11
+font_size 12
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
 cursor_shape beam
 
 # Themes:
-include themes/moon.conf
+include themes/dark.conf
+# include themes/moon.conf
 # include themes/macchiato.conf
 
 #Key Maps:
