--- a/cfg/kitty/themes/moon.conf
+++ b/cfg/kitty/themes/moon.conf
@@ -1,6 +1,6 @@
 # The basic colors
 foreground              #ffffff
-background              #1e1e1e
+background              #0d0d0d
 selection_foreground    #24273A
 selection_background    #F4DBD6
 
