--- a/cfg/.tmux.conf
+++ b/cfg/.tmux.conf
@@ -1,6 +1,5 @@
 unbind C-b
 set -g prefix C-Space
-
 set-option -g default-shell /bin/zsh
 set-option -sg escape-time 10
 set -g base-index 1
@@ -15,11 +14,6 @@ bind-key _ split-window -h
 bind-key M-- split-window -v -c '#{pane_current_path}'
 bind-key M-_ split-window -h -c '#{pane_current_path}'
 bind-key = send-keys 'C-l'
-# vim-like pane switching
-bind -r k select-pane -U 
-bind -r j select-pane -D 
-bind -r h select-pane -L 
-bind -r l select-pane -R 
 # vim-like pane resize
 bind -r C-k resize-pane -U
 bind -r C-j resize-pane -D
@@ -45,18 +39,17 @@ unbind C-Right
 # Custom Keys
 set -g mouse on
 
-bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
+bind-key r source-file ~/Downloads/repos/Dotfiles/cfg/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 # Plugins
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
-set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'TroubleC0re/yeycore'
+set -g @yeycore_theme 'dark'
+# set -g @yeycore_module 'music'
 # set -g @plugin 'catppuccin/tmux'
-#set -g @catppuccin_flavour 'macchiato' # or frappe, macchiato, mocha
+# set -g @catppuccin_flavour 'macchiato' # or frappe, macchiato, mocha
 
 # Plugins Settings
-set -g @resurrect-capture-pane-contents 'on'
-set -g @continuum-restore 'on'
 
 set -g @plugin 'tmux-plugins/tpm'
 run '~/.tmux/plugins/tpm/tpm'
