--- a/cfg/kitty/kitty.conf
+++ b/cfg/kitty/kitty.conf
@@ -1,6 +1,6 @@
 # Options:
 window_padding_width 1 2
-# background_opacity 0.3
+background_opacity 0.5
 allow_remote_control
 
 # Fonts:
@@ -13,8 +13,8 @@ bold_italic_font auto
 cursor_shape beam
 
 # Themes:
-include themes/dark.conf
-# include themes/moon.conf
+# include themes/dark.conf
+include themes/moon.conf
 # include themes/macchiato.conf
 
 #Key Maps:
